--- a/.gitignore
+++ b/.gitignore
@@ -406,3 +406,5 @@ imgui.ini
 bananatreeconfig.yaml
 # steam sdk
 steam-sdk/
+# gah visual studio cant tell the difference between intermediate files and models
+!models/*.obj
