--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=499,301
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -43,7 +44,8 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
-Size=1584,861
+Pos=0,0
+Size=32,32
 Collapsed=0
 
 [Window][viewport]
@@ -52,24 +54,28 @@ Size=784,268
 Collapsed=0
 
 [Window][Viewport]
-Pos=371,24
-Size=812,696
+Pos=12,24
+Size=9,5
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=369,696
+Size=10,5
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Log]
-Pos=0,722
-Size=1584,139
+Pos=0,31
+Size=32,1
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Property Editor]
-Pos=1185,24
-Size=399,696
+Pos=23,24
+Size=9,5
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Transform menu]
 ViewportPos=1523,485
@@ -78,9 +84,10 @@ Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=1185,24
-Size=399,696
+Pos=23,24
+Size=9,5
 Collapsed=0
+DockId=0x00000003,1
 
 [Window][Import model]
 Pos=948,369
@@ -93,12 +100,13 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=1185,24
-Size=399,696
+Pos=23,24
+Size=9,5
 Collapsed=0
+DockId=0x00000003,2
 
 [Window][Add static mesh to scene]
-Pos=444,221
+Pos=471,260
 Size=261,92
 Collapsed=0
 
@@ -134,6 +142,16 @@ Collapsed=0
 
 [Window][Script registry]
 Pos=0,24
-Size=369,696
+Size=10,5
 Collapsed=0
+DockId=0x00000001,1
+
+[Docking][Data]
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y Selected=0x995B0CF8
+  DockNode      ID=0x00000004 Parent=0xA0D3CDBE SizeRef=1584,696 Split=X
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1131,837 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=368,837 Selected=0xFC238FD9
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=1214,837 CentralNode=1 Selected=0x995B0CF8
+    DockNode    ID=0x00000003 Parent=0x00000004 SizeRef=451,837 Selected=0x0C11C2EA
+  DockNode      ID=0x00000007 Parent=0xA0D3CDBE SizeRef=1584,139 Selected=0xB7722E25
 
