--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,5 +1,6 @@
 [Window][Debug##Default]
-Pos=499,301
+ViewportPos=1506,489
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -43,6 +44,7 @@ Size=420,391
 Collapsed=0
 
 [Window][banana tree editor]
+Pos=0,0
 Size=32,32
 Collapsed=0
 
@@ -52,24 +54,28 @@ Size=784,268
 Collapsed=0
 
 [Window][Viewport]
-Pos=12,24
-Size=10,5
+Pos=17,24
+Size=6,5
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=10,5
+Size=15,5
 Collapsed=0
+DockId=0x00000003,1
 
 [Window][Log]
 Pos=0,31
 Size=32,1
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Property Editor]
-Pos=24,24
-Size=8,5
+Pos=25,24
+Size=7,5
 Collapsed=0
+DockId=0x00000002,1
 
 [Window][Transform menu]
 ViewportPos=1523,485
@@ -78,9 +84,10 @@ Size=872,679
 Collapsed=0
 
 [Window][Model registry]
-Pos=24,24
-Size=8,5
+Pos=25,24
+Size=7,5
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][Import model]
 Pos=948,369
@@ -93,9 +100,10 @@ Size=370,208
 Collapsed=0
 
 [Window][Project editor]
-Pos=24,24
-Size=8,5
+Pos=25,24
+Size=7,5
 Collapsed=0
+DockId=0x00000002,2
 
 [Window][Add static mesh to scene]
 Pos=471,260
@@ -134,6 +142,16 @@ Collapsed=0
 
 [Window][Script registry]
 Pos=0,24
-Size=10,5
+Size=15,5
 Collapsed=0
+DockId=0x00000003,0
+
+[Docking][Data]
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
+  DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,669 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0x9A68760C
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x27CF05AC
+  DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,166 Selected=0xB7722E25
 
