improve move function on transform

--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -45,7 +45,7 @@ Collapsed=0
 
 [Window][banana tree editor]
 Pos=0,0
-Size=32,32
+Size=32,16128
 Collapsed=0
 
 [Window][viewport]
@@ -55,25 +55,25 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=17,24
-Size=6,5
+Size=6,27812
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,24
-Size=15,5
+Size=15,27812
 Collapsed=0
 DockId=0x00000003,1
 
 [Window][Log]
-Pos=0,31
-Size=32,1
+Pos=0,27840
+Size=32,-11708
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Property Editor]
 Pos=25,24
-Size=7,5
+Size=7,27812
 Collapsed=0
 DockId=0x00000002,1
 
@@ -85,7 +85,7 @@ Collapsed=0
 
 [Window][Model registry]
 Pos=25,24
-Size=7,5
+Size=7,27812
 Collapsed=0
 DockId=0x00000002,0
 
@@ -101,7 +101,7 @@ Collapsed=0
 
 [Window][Project editor]
 Pos=25,24
-Size=7,5
+Size=7,27812
 Collapsed=0
 DockId=0x00000002,2
 
@@ -142,12 +142,12 @@ Collapsed=0
 
 [Window][Script registry]
 Pos=0,24
-Size=15,5
+Size=15,27812
 Collapsed=0
 DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
+DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,16104 Split=Y
   DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,669 Split=X
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0xFC238FD9
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
