explain component functions and add game.md

--- a/docs/docs.vcxproj
+++ b/docs/docs.vcxproj
@@ -142,6 +142,7 @@
     <None Include="classes\application_layer.md" />
     <None Include="classes\basic_gameobject.md" />
     <None Include="classes\component.md" />
+    <None Include="classes\game.md" />
     <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
