--- a/docs/docs.vcxproj.filters
+++ b/docs/docs.vcxproj.filters
@@ -19,5 +19,6 @@
     <None Include="classes\application_layer.md" />
     <None Include="classes\basic_gameobject.md" />
     <None Include="classes\component.md" />
+    <None Include="classes\game.md" />
   </ItemGroup>
 </Project>
