--- a/bananatree/imgui.ini
+++ b/bananatree/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=294,317
+ViewportPos=960,294
 ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
@@ -149,9 +149,9 @@ DockId=0x00000003,0
 [Docking][Data]
 DockSpace       ID=0xA0D3CDBE Window=0x9F65601B Pos=0,24 Size=32,8 Split=Y
   DockNode      ID=0x00000005 Parent=0xA0D3CDBE SizeRef=1584,669 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0x9A68760C
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=370,837 Selected=0xFC238FD9
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1212,837 Split=X
       DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=840,837 CentralNode=1 Selected=0x995B0CF8
-      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x27CF05AC
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=370,837 Selected=0x0C11C2EA
   DockNode      ID=0x00000006 Parent=0xA0D3CDBE SizeRef=1584,166 Selected=0xB7722E25
 
